# autoclickerheroes

./: .gitignore  .travis.yml  LICENSE  README.md  autoclickerheroes.pyproj  click.py  idle.py  idle_slayer.py  main.py  ngu_attacker.py  pyproject.toml  requirements.txt  synergism.py  test_click.py
autoclickerheroes/: idle_slayer.py  main.py  ngu_attacker.py  synergism.py  util.py
