[project]
name = "autoclickerheroes"

requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
  "opencv-python",
  "numpy",
  "pymouse",
  "pyuserinput",
  "pyscreenshot",
  "pynput>=1.7.7",
  "pygetwindow>=0.0.9",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autoclickerheroes"]
exclude = ["templates"]

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.scripts]
ngu = "autoclickerheroes.ngu_attacker:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
